contrib: resource-manager major update
This change contains significant updates to the resource manager.

Signed-off-by: Carl van Schaik <quic_cvanscha@quicinc.com>

--- a/arch/armv8/build.conf
+++ b/arch/armv8/build.conf
@@ -2,6 +2,7 @@
 #
 # SPDX-License-Identifier: BSD-3-Clause
 
-arch_include aarch64 include
+include include
 
 source src/smc.c
+source src/timestamp.c
