--- a/build.conf
+++ b/build.conf
@@ -3,22 +3,9 @@
 # SPDX-License-Identifier: BSD-3-Clause
 
 program resource-manager
-arch aarch64
-
-board sm8150
-
-target_triple aarch64-linux-gnu
-cflags -march=armv8.5-a+rng -mcpu=cortex-a75
-ldflags -mcpu=cortex-a75
 
 # to override musl libc register_t
 configs __DEFINED_register_t
-
-# for debug
-# FIXME: check how to conditionally enable debug or use different variant
-# config file?
-cflags -O1 -g
-#configs NDEBUG
 
 cflags -std=gnu18
 # Turn all warnings on as errors by default
@@ -26,6 +13,7 @@ cflags -Weverything
 cflags -Werror
 
 # suppress the warning for header file from compiler
+# FIXME: double check if it's right
 #cflags -Wno-reserved-id-macro
 
 # Unused macros are expected
@@ -71,7 +59,5 @@ ldflags -Wl,-z,separate-loadable-segments
 include include
 
 sub_directory src
-sub_directory arch/armv8
-sub_directory platform/qemu
 
 end_program
