--- a/src/build.conf
+++ b/src/build.conf
@@ -5,9 +5,10 @@
 source dt/dt_overlay.c
 source event/event-isr.c
 source exit/exit.c
-source guest_interface.c
+source guest_interface.c guest_accessors.c guest_hypresult.c
 source hyp/memextent.c
 source irq_manager/irq_manager.c
+source irq_manager/interrupt.c
 source memparcel/memparcel.c
 source preempt/preempt.c
 source resource-manager.c
@@ -15,7 +16,6 @@ source rpc/rm-rpc.c rpc/rm-rpc-msgqueue.c
 source rpc/rm-rpc-fifo.c
 source uart/uart.c
 source utils/address_range_allocator.c
-source utils/circular_buf.c
 source utils/dict.c
 source utils/vector.c
 source vm_config/vm_config.c
@@ -24,11 +24,14 @@ source vm_config/dtb_parser.c
 source vm_config/vm_config_parser.c
 source vm_console/vm_console_simple.c
 source vm_creation/hlos_vm.c
-source vm_creation/second_vm.c
 source vm_creation/vm_creation.c
 source vm_creation/dto_construct.c
 source vm_mgnt/vm_mgnt.c
+source log.c
 
 ldflags -lfdt -Wl,-Bstatic
 
 configs PAGE_SIZE=4096
+
+# Temporary
+configs STATIC_CLIENT_REGISTRATION=1
