--- a/platform/qemu/build.conf
+++ b/platform/qemu/build.conf
@@ -2,5 +2,11 @@
 #
 # SPDX-License-Identifier: BSD-3-Clause
 
+include include
 local_include src
+source src/exit/exit.c
 source src/uart_qemu.c
+source src/platform_qemu.c
+source src/vm_config.c
+source src/vm_dt.c
+source src/vm_client.c
